--- a/src/global.less
+++ b/src/global.less
@@ -13,10 +13,19 @@
     flex-direction: column;
     height: 90%;
     margin: 15px 0 0 15px;
+
     .tableHeader{
       display: flex;
       flex-direction: row;
       justify-content:flex-start;
+      .select140{
+        width: 140px;
+        margin-right: 10px;
+      }
+      .select100{
+        width: 100px;
+        margin-right: 10px;
+      }
     }
     .tableBody{
     }
@@ -27,4 +36,5 @@
       justify-content: center;
     }
   }
+
 
