:sparkles: 完成教师调整选题

--- a/src/global.less
+++ b/src/global.less
@@ -18,6 +18,10 @@
       display: flex;
       flex-direction: row;
       justify-content:flex-start;
+      .select200{
+        width: 200px;
+        margin-right: 10px;
+      }
       .select140{
         width: 140px;
         margin-right: 10px;
