:bookmark: 抽离查看详情

--- a/src/global.less
+++ b/src/global.less
@@ -18,6 +18,18 @@ html,body,#app{
     display: flex;
     flex-direction: row;
     justify-content:flex-start;
+    .select200{
+      width: 200px;
+      margin-right: 10px;
+    }
+    .select140{
+      width: 140px;
+      margin-right: 10px;
+    }
+    .select100{
+      width: 100px;
+      margin-right: 10px;
+    }
   }
   .tableBody{
   }
